<?xml version="1.0"?>
<package format="2">
  <name>flatten</name>
  <version>0.0.1</version>
  <description>The flatten package</description>
  <maintainer email="linh@todo.todo">linh</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
</package>
